--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.17",
     "expo-constants": "~17.0.7",
+    "expo-device": "^7.0.2",
     "expo-document-picker": "~13.0.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -38,6 +39,7 @@
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
     "expo-location": "~18.0.7",
+    "expo-maps": "^0.7.3",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -73,6 +75,7 @@
     "react-native-sms-retriever": "^1.1.1",
     "react-native-svg": "15.8.0",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
