--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "@react-native-clipboard/clipboard": "^1.16.1",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-native-picker/picker": "^2.11.0",
+   "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.9",
-    "expo": "~52.0.36",
+    "date-fns": "^4.1.0",
+    "expo": "~52.0.38",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
-    "expo-camera": "~16.0.17",
-    "expo-constants": "~17.0.7",
+    "expo-camera": "~16.0.18",
+    "expo-constants": "~17.0.8",
     "expo-device": "^7.0.2",
     "expo-document-picker": "~13.0.3",
     "expo-font": "~13.0.4",
@@ -38,15 +39,15 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
-    "expo-location": "~18.0.7",
+    "expo-location": "~18.0.8",
     "expo-maps": "^0.7.3",
-    "expo-router": "~4.0.17",
+    "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "~4.0.8",
-    "expo-video": "^2.0.5",
+     "expo-video": "~2.0.6",
     "expo-web-browser": "~14.0.2",
     "i18next": "^24.2.2",
     "jest-expo": "~52.0.4",
@@ -89,7 +90,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
